--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,24 +8,25 @@ body {
     background-color: #d9dcd6;
 }
 
-header nav {
-    padding: 20px;
+.header {
+    padding: 20px 0px 40px 0px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-header h1 nav {
+.header h1 nav {
     display: inline-block;
     font-size: 48px;
 }
-
+.title {
+    float: left;
+}
 header h1 .seo {
     color: #d9dcd6;
 }
 
 .header nav {
-    padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
